refactor: sonarcloud quality gate (#111)
* refactor(S1118): utility classes should not have public constructors

* refactor: fail-fast approach while splitting

* refactor: adopt java 17 features

* refactor: drop unreachable statement

* refactor: generic data factory provider

* fix: invalid mockito-inline version

* refactor: rename test data factory

* feat: switch to mixed memory buffer

* refactor: command handler + test coverage

* test: make path tests os-agnostic

* fix: list files sorted by name

* test: cover command factory

* test: fix new line test output

* test: cover no-arg command execution