@@ -1,8 +1,10 @@
 package dev.noid.toolbox.opdf.pdfbox;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.mockito.Mockito.doThrow;
+import static org.mockito.Mockito.mock;
 
-import java.util.Arrays;
 import java.util.List;
 import org.apache.pdfbox.io.MemoryUsageSetting;
 import org.apache.pdfbox.multipdf.Splitter;
@@ -48,7 +50,7 @@ class PdfBoxSplitterTest {
   }
 
   @Test
-  void split_closes_all_resources() {
+  void split_closes_all_resources_when_succeed() {
     TestSource twoPages = new TestSource("two-text-pages.pdf");
     TestSink testSink = new TestSink();
 
@@ -70,7 +72,7 @@ class PdfBoxSplitterTest {
 
     splitter.split(multiPage, testSink);
 
-    List<Integer> knownPageSizes = Arrays.asList(
+    List<Integer> knownPageSizes = List.of(
         68643, 96934, 50784, 141184, 107684, 67333, 94891, 132892, 168068, 143445, 102770,
         144425, 111671, 113513, 104010, 148316, 104181, 140941, 202150, 97582, 94488, 50652
     );
@@ -78,5 +80,26 @@ class PdfBoxSplitterTest {
     for (int i = 0; i < knownPageSizes.size(); i++) {
       assertEquals(knownPageSizes.get(i), testSink.getBytesWritten(i).length);
     }
+  }
+
+  @Test
+  void split_error_when_document_missing() {
+    TestSource badSource = new TestSource("not-found.pdf");
+    TestSink testSink = new TestSink();
+
+    Exception error = assertThrows(IllegalArgumentException.class, () -> splitter.split(badSource, testSink));
+    assertEquals("Cannot split document", error.getMessage());
+    assertEquals("Test resource not found: not-found.pdf", error.getCause().getMessage());
+  }
+
+  @Test
+  void split_error_when_sink_failed() {
+    TestSource twoPages = new TestSource("two-text-pages.pdf");
+    TestSink badSink = mock(TestSink.class);
+    doThrow(new RuntimeException("Test sink problem")).when(badSink).getWriting();
+
+    Exception error = assertThrows(IllegalArgumentException.class, () -> splitter.split(twoPages, badSink));
+    assertEquals("Cannot split document", error.getMessage());
+    assertEquals("Test sink problem", error.getCause().getMessage());
   }
 }
